render clipboard content to WPF UI

--- a/ClipboardManager/MainWindow.xaml
+++ b/ClipboardManager/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Clipboard Manager" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock Name="clipContent" FontSize="18"></TextBlock>
     </Grid>
 </Window>
