--- a/ClipboardManager/MainWindow.xaml
+++ b/ClipboardManager/MainWindow.xaml
@@ -3,10 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:tb="http://www.hardcodet.net/taskbar"
         xmlns:local="clr-namespace:ClipboardManager"
         mc:Ignorable="d"
         Title="Clipboard Manager" Height="450" Width="800">
     <Grid>
+        <!-- Taskbar minize icon (WPF-NotifyIcon) -->
+        <tb:TaskbarIcon x:Name="NotifyIcon" ToolTipText="Clipboard Manager" />
         <TextBlock Name="clipContent" FontSize="18"></TextBlock>
     </Grid>
 </Window>
