--- a/ClipboardManager/MainWindow.xaml
+++ b/ClipboardManager/MainWindow.xaml
@@ -7,9 +7,12 @@
         xmlns:local="clr-namespace:ClipboardManager"
         mc:Ignorable="d"
         Title="Clipboard Manager" Height="450" Width="800">
+    <Window.Resources>
+        <local:ShowWindowCommand x:Key="ShowWindow" />
+    </Window.Resources>
     <Grid>
         <!-- Taskbar minize icon (WPF-NotifyIcon) -->
-        <tb:TaskbarIcon x:Name="NotifyIcon" ToolTipText="Clipboard Manager" />
+        <tb:TaskbarIcon x:Name="NotifyIcon" ToolTipText="Clipboard Manager" DoubleClickCommand="{StaticResource ShowWindow}"/>
         <TextBlock Name="clipContent" FontSize="18"></TextBlock>
     </Grid>
 </Window>
